# graspnet-baseline

./: graspnetpy.py  pyproject.toml
dataset/: graspnet_dataset.py
knn/: setup.py
models/: backbone.py  graspnet.py  loss.py  modules.py
pointnet2/: pyproject.toml  setup.py
utils/: label_generation.py
